syntax = "proto3";
package protos . output. globalFiles;
import "protos/helpers/command.proto";
import "protos/helpers/common.proto";

option go_package = "code-analyser/protos/pb/output/globalFiles";

message DockerCompose {
  protos.helpers.Error error = 1;
  bool used = 2;
  string filePath = 3;
  repeated protos.helpers.Command commands = 4;
}
